<resources>
    <string name="app_name">StarsWarsCitizen</string>

    <!--Search screen-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">search</string>
    <string name="not_found">not found</string>
    <string name="nothing_is_found">Nothing is found</string>
    <string name="intro">intro</string>
    <string name="intro_text">You haven\'t searched anything yet</string>
    <string name="default_text">Default text</string>
    <string name="add_to_favourite">add to favourite</string>
    <string name="item_image">item image</string>
    <string name="error">error</string>
    <string name="something_went_wrong">The dark side of the Force did something with your device. Check your internet connection and try again</string>
    <string name="gender_field">Gender:   %1$s</string>
    <string name="starships_field">Number of starships piloted:   %1$s</string>
    <string name="diameter_field">Diameter:   %1$s</string>
    <string name="population_field">Population:   %1$s</string>
    <string name="model_field">Model:   %1$s</string>
    <string name="manufacturer_field">Manufacturer:   %1$s</string>
    <string name="passengers_field">Number of passengers:   %1$s</string>
    <string name="search_title">Search</string>
    <string name="settings">Settings</string>
    <string name="favourite">Favourite</string>
    <string name="toast_text">Input must be more than 2 characters</string>


    <!--Favourite screen-->
    <string name="have_not_add_anything">You haven`t add anything to favourite yet</string>

    <!--Settings screen-->
    <string name="dark_side_of_the_force">Choose the Dark side of the Force</string>
    <string name="light_side_of_the_force">Choose the Light side of the Force</string>


</resources>